# snappy_16_knots

./: .gitattributes  MANIFEST.in  README.rst  build_sdist.py  pyproject.toml  setup.py
manifold_src/: 16_knots.sqlite  make_sqlite_db.py
manifold_src/original_manifold_sources/: alternating_knots_16.csv  nonalternating_knots_16.csv
python_src/: __init__.py  database.py  test.py
