[build-system]
requires = ["setuptools >= 77.0.3", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "snappy_16_knots"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
  {name = "Marc Culler"},
  {name = "Nathan M. Dunfield"},
  {name = "Mattias Goerner"},
  {name = "Shana Li"},
  {name = "Malik Obeidin"},
]
description = "Database of 16 crossing knots"
readme = "README.rst"
license = {text = "GPLv2+"}
keywords = ["knots"]
classifiers = [
  "Development Status :: 5 - Production/Stable",	
  "Intended Audience :: Science/Research",	
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.setuptools.dynamic]
version = {attr = "snappy_16_knots.__version__"}

[project.urls]
Homepage = "https://github.com/Shakugannotorch/snappy_16_knots"
Repository = "https://github.com/Shakugannotorch/snappy_16_knots.git"
"Bug Tracker" = "https://github.com/Shakugannotorch/snappy_16_knots/issues"